// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<timeline> demo: render [basic] correctly 1`] = `
"<div style=\\"margin-bottom: 40px;\\"><span class=\\"mb-typography\\" style=\\"vertical-align: middle; margin-right: 8px;\\"> Reverse <!----><!--v-if--><!--v-if--><!--v-if--></span><span class=\\"mb-radio-group mb-radio-group-size-undefined mb-radio-group-direction-horizontal\\"><label class=\\"mb-radio mb-radio-checked\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"false\\"><span class=\\"mb-icon-hover mb-icon-hover-disabled mb-radio-icon-hover\\"><span class=\\"mb-radio-icon\\"></span></span><span class=\\"mb-radio-label\\">No Reverse</span></label><label class=\\"mb-radio\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"true\\"><span class=\\"mb-icon-hover mb-radio-icon-hover\\"><span class=\\"mb-radio-icon\\"></span></span><span class=\\"mb-radio-label\\">Reverse</span></label></span></div>
<div role=\\"list\\" class=\\"mb-timeline mb-timeline-left mb-timeline-direction-vertical\\">
  <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
    <div class=\\"mb-timeline-item-dot-wrapper\\">
      <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"mb-timeline-item-dot-content\\">
        <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"mb-timeline-item-content-wrapper\\">
      <div class=\\"mb-timeline-item-content\\">The first milestone</div>
      <div class=\\"mb-timeline-item-label\\">2017-03-10</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
    <div class=\\"mb-timeline-item-dot-wrapper\\">
      <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"mb-timeline-item-dot-content\\">
        <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"mb-timeline-item-content-wrapper\\">
      <div class=\\"mb-timeline-item-content\\">The second milestone</div>
      <div class=\\"mb-timeline-item-label\\">2018-05-12</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
    <div class=\\"mb-timeline-item-dot-wrapper\\">
      <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"mb-timeline-item-dot-content\\">
        <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"mb-timeline-item-content-wrapper\\">
      <div class=\\"mb-timeline-item-content\\">The third milestone</div>
      <div class=\\"mb-timeline-item-label\\">2020-09-30</div>
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`<timeline> demo: render [direction] correctly 1`] = `
"<div>
  <div class=\\"mb-row mb-row-align-center mb-row-justify-start\\" style=\\"margin-bottom: 24px;\\"><span class=\\"mb-typography\\">mode: &nbsp; &nbsp;<!----><!--v-if--><!--v-if--><!--v-if--></span><span class=\\"mb-radio-group mb-radio-group-size-undefined mb-radio-group-direction-horizontal\\"><label class=\\"mb-radio mb-radio-checked\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"top\\"><span class=\\"mb-icon-hover mb-icon-hover-disabled mb-radio-icon-hover\\"><span class=\\"mb-radio-icon\\"></span></span><span class=\\"mb-radio-label\\">top</span></label><label class=\\"mb-radio\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"bottom\\"><span class=\\"mb-icon-hover mb-radio-icon-hover\\"><span class=\\"mb-radio-icon\\"></span></span><span class=\\"mb-radio-label\\">bottom</span></label><label class=\\"mb-radio\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"alternate\\"><span class=\\"mb-icon-hover mb-radio-icon-hover\\"><span class=\\"mb-radio-icon\\"></span></span><span class=\\"mb-radio-label\\">alternate</span></label></span></div>
  <div role=\\"list\\" class=\\"mb-timeline mb-timeline-top mb-timeline-direction-horizontal\\">
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-horizontal-top mb-timeline-item-label-same mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-horizontal\\" style=\\"border-top-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\">
          <div class=\\"mb-row mb-row-align-start mb-row-justify-start\\" style=\\"display: inline-flex; align-items: center;\\"><img width=\\"40\\" style=\\"margin-right: 16px; margin-bottom: 12px;\\" src=\\"https://p1-mb.byteimg.com/tos-cn-i-uwbnlip3yd/b5d834b83708a269b4562924436eac48.png~tplv-uwbnlip3yd-png.png\\">
            <div style=\\"margin-bottom: 12px;\\"> Toutiao <div style=\\"font-size: 12px; color: rgb(78, 89, 105);\\"> Founded in 2012 </div>
            </div>
          </div>
        </div>
        <div class=\\"mb-timeline-item-label\\">2012-08</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-horizontal-top mb-timeline-item-label-same mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-horizontal\\" style=\\"border-top-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\">
          <div class=\\"mb-row mb-row-align-start mb-row-justify-start\\" style=\\"display: inline-flex; align-items: center;\\"><img width=\\"40\\" style=\\"margin-right: 16px; margin-bottom: 12px;\\" src=\\"https://p1-mb.byteimg.com/tos-cn-i-uwbnlip3yd/385ed540c359ec8a9b9ce2b5fe89b098.png~tplv-uwbnlip3yd-png.png\\">
            <div style=\\"margin-bottom: 12px;\\"> Xigua Video <div style=\\"font-size: 12px; color: rgb(78, 89, 105);\\"> Founded in 2017 </div>
            </div>
          </div>
        </div>
        <div class=\\"mb-timeline-item-label\\">2017-05</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-horizontal-top mb-timeline-item-label-same mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-horizontal\\" style=\\"border-top-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\">
          <div class=\\"mb-row mb-row-align-start mb-row-justify-start\\" style=\\"display: inline-flex; align-items: center;\\"><img width=\\"40\\" style=\\"margin-right: 16px; margin-bottom: 12px;\\" src=\\"https://p1-mb.byteimg.com/tos-cn-i-uwbnlip3yd/385ed540c359ec8a9b9ce2b5fe89b098.png~tplv-uwbnlip3yd-png.png\\">
            <div style=\\"margin-bottom: 12px;\\"> Pipidance <div style=\\"font-size: 12px; color: rgb(78, 89, 105);\\"> Founded in 2018 </div>
            </div>
          </div>
        </div>
        <div class=\\"mb-timeline-item-label\\">2018-07</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-horizontal-top mb-timeline-item-label-same mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-horizontal\\" style=\\"border-top-style: dashed;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot-custom\\">
            <div class=\\"mb-spin\\">
              <div class=\\"mb-spin-icon\\" style=\\"font-size: 12px;\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"mb-icon mb-icon-loading mb-icon-spin\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
                  <path d=\\"M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6\\"></path>
                </svg></div>
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\"></div>
        <div class=\\"mb-timeline-item-label\\"></div>
      </div>
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`<timeline> demo: render [dot] correctly 1`] = `
"<div style=\\"display: flex;\\">
  <div role=\\"list\\" class=\\"mb-timeline mb-timeline-left mb-timeline-direction-vertical\\" style=\\"margin-right: 40px;\\">
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\" style=\\"background-color: rgb(0, 180, 42);\\"></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\"> The first milestone </div>
        <div class=\\"mb-timeline-item-label\\">2020-04-12</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\"> The second milestone </div>
        <div class=\\"mb-timeline-item-label\\">2020-05-17</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot-custom\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"mb-icon mb-icon-clock-circle\\" style=\\"font-size: 12px; color: rgb(245, 63, 63);\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
              <path d=\\"M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z\\"></path>
            </svg></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\"> The third milestone </div>
        <div class=\\"mb-timeline-item-label\\">2020-06-22</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\"> The third milestone </div>
        <div class=\\"mb-timeline-item-label\\">2020-06-22</div>
      </div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <div role=\\"list\\" class=\\"mb-timeline mb-timeline-left mb-timeline-direction-vertical\\" style=\\"margin-right: 40px;\\">
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot-custom\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"mb-icon mb-icon-check\\" style=\\"font-size: 12px; padding: 2px; box-sizing: border-box; border-radius: 50%;\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
              <path d=\\"M41.678 11.05 19.05 33.678 6.322 20.95\\"></path>
            </svg></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\"> The first milestone </div>
        <div class=\\"mb-timeline-item-label\\">2020-04-12</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot-custom\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"mb-icon mb-icon-check\\" style=\\"font-size: 12px; padding: 2px; box-sizing: border-box; border-radius: 50%;\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
              <path d=\\"M41.678 11.05 19.05 33.678 6.322 20.95\\"></path>
            </svg></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <!--v-if-->
        <div class=\\"mb-timeline-item-label\\">2020-05-17</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\">The third milestone</div>
        <div class=\\"mb-timeline-item-label\\">2020-06-22</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\"> The third milestone </div>
        <div class=\\"mb-timeline-item-label\\">2020-06-22</div>
      </div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <div role=\\"list\\" class=\\"mb-timeline mb-timeline-left mb-timeline-direction-vertical\\">
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\">The first milestone</div>
        <div class=\\"mb-timeline-item-label\\">2020-04-12</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\"> The second milestone </div>
        <div class=\\"mb-timeline-item-label\\">2020-05-17</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\"> The third milestone </div>
        <div class=\\"mb-timeline-item-label\\">2020-06-22</div>
      </div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`<timeline> demo: render [icon] correctly 1`] = `
"<div role=\\"list\\" class=\\"mb-timeline mb-timeline-left mb-timeline-direction-vertical\\">
  <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
    <div class=\\"mb-timeline-item-dot-wrapper\\">
      <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"mb-timeline-item-dot-content\\">
        <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\" style=\\"background-color: rgb(0, 180, 42);\\"></div>
      </div>
    </div>
    <div class=\\"mb-timeline-item-content-wrapper\\">
      <div class=\\"mb-timeline-item-content\\"> The first milestone </div>
      <div class=\\"mb-timeline-item-label\\">2017-03-10</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
    <div class=\\"mb-timeline-item-dot-wrapper\\">
      <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"mb-timeline-item-dot-content\\">
        <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"mb-timeline-item-content-wrapper\\">
      <div class=\\"mb-timeline-item-content\\">The second milestone</div>
      <div class=\\"mb-timeline-item-label\\">2018-05-22</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
    <div class=\\"mb-timeline-item-dot-wrapper\\">
      <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"mb-timeline-item-dot-content\\">
        <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\" style=\\"background-color: rgb(245, 63, 63);\\"></div>
      </div>
    </div>
    <div class=\\"mb-timeline-item-content-wrapper\\">
      <div class=\\"mb-timeline-item-content\\"> The third milestone <svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"mb-icon mb-icon-exclamation-circle-fill\\" style=\\"font-size: 12px; margin-left: 4px;\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
          <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm-2-11a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2Zm4-18a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V15Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
        </svg></div>
      <div class=\\"mb-timeline-item-label\\">2020-06-22</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
    <div class=\\"mb-timeline-item-dot-wrapper\\">
      <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"mb-timeline-item-dot-content\\">
        <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\" style=\\"background-color: rgb(201, 205, 212);\\"></div>
      </div>
    </div>
    <div class=\\"mb-timeline-item-content-wrapper\\">
      <div class=\\"mb-timeline-item-content\\"> The fourth milestone </div>
      <div class=\\"mb-timeline-item-label\\">2020-09-30</div>
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`<timeline> demo: render [label] correctly 1`] = `
"<div>
  <div class=\\"mb-row mb-row-align-center mb-row-justify-start\\"><span class=\\"mb-typography\\">labelPosition: &nbsp; &nbsp;<!----><!--v-if--><!--v-if--><!--v-if--></span><span class=\\"mb-radio-group mb-radio-group-size-undefined mb-radio-group-direction-horizontal\\"><label class=\\"mb-radio mb-radio-checked\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"same\\"><span class=\\"mb-icon-hover mb-icon-hover-disabled mb-radio-icon-hover\\"><span class=\\"mb-radio-icon\\"></span></span><span class=\\"mb-radio-label\\">same</span></label><label class=\\"mb-radio\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"relative\\"><span class=\\"mb-icon-hover mb-radio-icon-hover\\"><span class=\\"mb-radio-icon\\"></span></span><span class=\\"mb-radio-label\\">relative</span></label></span></div>
  <div class=\\"mb-row mb-row-align-center mb-row-justify-start\\" style=\\"margin: 20px 0px 24px;\\"><span class=\\"mb-typography\\">mode: &nbsp; &nbsp;<!----><!--v-if--><!--v-if--><!--v-if--></span><span class=\\"mb-radio-group mb-radio-group-size-undefined mb-radio-group-direction-horizontal\\"><label class=\\"mb-radio mb-radio-checked\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"left\\"><span class=\\"mb-icon-hover mb-icon-hover-disabled mb-radio-icon-hover\\"><span class=\\"mb-radio-icon\\"></span></span><span class=\\"mb-radio-label\\">left</span></label><label class=\\"mb-radio\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"right\\"><span class=\\"mb-icon-hover mb-radio-icon-hover\\"><span class=\\"mb-radio-icon\\"></span></span><span class=\\"mb-radio-label\\">right</span></label><label class=\\"mb-radio\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"alternate\\"><span class=\\"mb-icon-hover mb-radio-icon-hover\\"><span class=\\"mb-radio-icon\\"></span></span><span class=\\"mb-radio-label\\">alternate</span></label></span></div>
  <div role=\\"list\\" class=\\"mb-timeline mb-timeline-left mb-timeline-direction-vertical\\">
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\" style=\\"background-color: rgb(82, 196, 25);\\"></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\"> The first milestone </div>
        <div class=\\"mb-timeline-item-label\\">2017-03-10</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\" labelposition=\\"same\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\" style=\\"background-color: rgb(245, 34, 45);\\"></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\"> The second milestone </div>
        <div class=\\"mb-timeline-item-label\\">2018-05-12</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\"> The third milestone </div>
        <div class=\\"mb-timeline-item-label\\">2020-09-30</div>
      </div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`<timeline> demo: render [mode] correctly 1`] = `
"<div class=\\"mb-row mb-row-align-start mb-row-justify-space-between\\">
  <div role=\\"list\\" class=\\"mb-timeline mb-timeline-alternate mb-timeline-direction-vertical\\" style=\\"flex: 1;\\">
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\">The first milestone</div>
        <div class=\\"mb-timeline-item-label\\">2017-03-10</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\">The second milestone</div>
        <div class=\\"mb-timeline-item-label\\">2018-05-12</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\"> The third milestone </div>
        <div class=\\"mb-timeline-item-label\\">2020-09-30</div>
      </div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <div role=\\"list\\" class=\\"mb-timeline mb-timeline-right mb-timeline-direction-vertical\\" style=\\"flex: 1;\\">
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-right mb-timeline-item-label-same mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\">The first milestone</div>
        <div class=\\"mb-timeline-item-label\\">2017-03-10</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-right mb-timeline-item-label-same mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\">The second milestone</div>
        <div class=\\"mb-timeline-item-label\\">2018-05-12</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-right mb-timeline-item-label-same mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\"> The third milestone </div>
        <div class=\\"mb-timeline-item-label\\">2020-09-30</div>
      </div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`<timeline> demo: render [pending] correctly 1`] = `
"<div class=\\"mb-row mb-row-align-center mb-row-justify-start\\" style=\\"margin-bottom: 24px;\\"><label class=\\"mb-checkbox\\" checked=\\"false\\"><input type=\\"checkbox\\" class=\\"mb-checkbox-target\\"><span class=\\"mb-icon-hover mb-checkbox-icon-hover\\"><div class=\\"mb-checkbox-icon\\"><!----></div></span><span class=\\"mb-checkbox-label\\"> horizontal &nbsp; &nbsp; </span></label><label class=\\"mb-checkbox\\" checked=\\"false\\"><input type=\\"checkbox\\" class=\\"mb-checkbox-target\\"><span class=\\"mb-icon-hover mb-checkbox-icon-hover\\"><div class=\\"mb-checkbox-icon\\"><!----></div></span><span class=\\"mb-checkbox-label\\"> reverse &nbsp; &nbsp; </span></label><label class=\\"mb-checkbox\\" checked=\\"false\\"><input type=\\"checkbox\\" class=\\"mb-checkbox-target\\"><span class=\\"mb-icon-hover mb-checkbox-icon-hover\\"><div class=\\"mb-checkbox-icon\\"><!----></div></span><span class=\\"mb-checkbox-label\\"> pending &nbsp; &nbsp; </span></label><label class=\\"mb-checkbox\\" checked=\\"false\\"><input type=\\"checkbox\\" class=\\"mb-checkbox-target\\"><span class=\\"mb-icon-hover mb-checkbox-icon-hover\\"><div class=\\"mb-checkbox-icon\\"><!----></div></span><span class=\\"mb-checkbox-label\\"> custom pendingDot </span></label></div>
<div role=\\"list\\" class=\\"mb-timeline mb-timeline-left mb-timeline-direction-vertical\\">
  <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
    <div class=\\"mb-timeline-item-dot-wrapper\\">
      <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"mb-timeline-item-dot-content\\">
        <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\" style=\\"background-color: rgb(82, 196, 25);\\"></div>
      </div>
    </div>
    <div class=\\"mb-timeline-item-content-wrapper\\">
      <div class=\\"mb-timeline-item-content\\"> The first milestone </div>
      <div class=\\"mb-timeline-item-label\\">2017-03-10</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
    <div class=\\"mb-timeline-item-dot-wrapper\\">
      <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"mb-timeline-item-dot-content\\">
        <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\" style=\\"background-color: rgb(245, 34, 45);\\"></div>
      </div>
    </div>
    <div class=\\"mb-timeline-item-content-wrapper\\">
      <div class=\\"mb-timeline-item-content\\"> The second milestone </div>
      <div class=\\"mb-timeline-item-label\\">2018-05-12</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
    <div class=\\"mb-timeline-item-dot-wrapper\\">
      <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"mb-timeline-item-dot-content\\">
        <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"mb-timeline-item-content-wrapper\\">
      <div class=\\"mb-timeline-item-content\\">The third milestone</div>
      <div class=\\"mb-timeline-item-label\\">2020-09-30</div>
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`<timeline> demo: render [type] correctly 1`] = `
"<div role=\\"list\\" class=\\"mb-timeline mb-timeline-left mb-timeline-direction-vertical\\">
  <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
    <div class=\\"mb-timeline-item-dot-wrapper\\">
      <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: dashed;\\"></div>
      <div class=\\"mb-timeline-item-dot-content\\">
        <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"mb-timeline-item-content-wrapper\\">
      <div class=\\"mb-timeline-item-content\\"> The first milestone <br><span class=\\"mb-typography mb-typography-secondary\\" style=\\"font-size: 12px; margin-top: 4px;\\"> This is a descriptive message <!----><!--v-if--><!--v-if--><!--v-if--></span></div>
      <div class=\\"mb-timeline-item-label\\">2017-03-10</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
    <div class=\\"mb-timeline-item-dot-wrapper\\">
      <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: dashed;\\"></div>
      <div class=\\"mb-timeline-item-dot-content\\">
        <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"mb-timeline-item-content-wrapper\\">
      <div class=\\"mb-timeline-item-content\\"> The second milestone <br><span class=\\"mb-typography mb-typography-secondary\\" style=\\"font-size: 12px; margin-top: 4px;\\"> This is a descriptive message <!----><!--v-if--><!--v-if--><!--v-if--></span></div>
      <div class=\\"mb-timeline-item-label\\">2018-05-12</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-same mb-timeline-item-last\\">
    <div class=\\"mb-timeline-item-dot-wrapper\\">
      <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: dashed;\\"></div>
      <div class=\\"mb-timeline-item-dot-content\\">
        <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"mb-timeline-item-content-wrapper\\">
      <div class=\\"mb-timeline-item-content\\"> The third milestone <br><span class=\\"mb-typography mb-typography-secondary\\" style=\\"font-size: 12px; margin-top: 4px;\\"> This is a descriptive message <!----><!--v-if--><!--v-if--><!--v-if--></span></div>
      <div class=\\"mb-timeline-item-label\\">2020-09-30</div>
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`<timeline> demo: render [vertical] correctly 1`] = `
"<div>
  <div class=\\"mb-row mb-row-align-center mb-row-justify-start\\" style=\\"margin-bottom: 24px;\\"><span class=\\"mb-typography\\">mode: &nbsp; &nbsp;<!----><!--v-if--><!--v-if--><!--v-if--></span><span class=\\"mb-radio-group mb-radio-group-size-undefined mb-radio-group-direction-horizontal\\"><label class=\\"mb-radio mb-radio-checked\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"left\\"><span class=\\"mb-icon-hover mb-icon-hover-disabled mb-radio-icon-hover\\"><span class=\\"mb-radio-icon\\"></span></span><span class=\\"mb-radio-label\\">left</span></label><label class=\\"mb-radio\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"right\\"><span class=\\"mb-icon-hover mb-radio-icon-hover\\"><span class=\\"mb-radio-icon\\"></span></span><span class=\\"mb-radio-label\\">right</span></label><label class=\\"mb-radio\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"alternate\\"><span class=\\"mb-icon-hover mb-radio-icon-hover\\"><span class=\\"mb-radio-icon\\"></span></span><span class=\\"mb-radio-label\\">alternate</span></label></span></div>
  <div role=\\"list\\" class=\\"mb-timeline mb-timeline-left mb-timeline-direction-vertical\\">
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-relative mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\">
          <div class=\\"mb-row mb-row-align-start mb-row-justify-start\\" style=\\"display: inline-flex; align-items: center;\\"><img width=\\"40\\" style=\\"margin-right: 16px; margin-bottom: 12px;\\" src=\\"https://p1-mb.byteimg.com/tos-cn-i-uwbnlip3yd/b5d834b83708a269b4562924436eac48.png~tplv-uwbnlip3yd-png.png\\">
            <div style=\\"margin-bottom: 12px;\\"> Toutiao <div style=\\"font-size: 12px; color: rgb(78, 89, 105);\\"> Founded in 2012 </div>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
      <div class=\\"mb-timeline-item-label\\">2012-08</div>
    </div>
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-relative mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\">
          <div class=\\"mb-row mb-row-align-start mb-row-justify-start\\" style=\\"display: inline-flex; align-items: center;\\"><img width=\\"40\\" style=\\"margin-right: 16px; margin-bottom: 12px;\\" src=\\"https://p1-mb.byteimg.com/tos-cn-i-uwbnlip3yd/385ed540c359ec8a9b9ce2b5fe89b098.png~tplv-uwbnlip3yd-png.png\\">
            <div style=\\"margin-bottom: 12px;\\"> Xigua Video <div style=\\"font-size: 12px; color: rgb(78, 89, 105);\\"> Founded in 2017 </div>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
      <div class=\\"mb-timeline-item-label\\">2017-05</div>
    </div>
    <div role=\\"listitem\\" class=\\"mb-timeline-item mb-timeline-item-vertical-left mb-timeline-item-label-relative mb-timeline-item-last\\">
      <div class=\\"mb-timeline-item-dot-wrapper\\">
        <div class=\\"mb-timeline-item-dot-line mb-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"mb-timeline-item-dot-content\\">
          <div class=\\"mb-timeline-item-dot mb-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"mb-timeline-item-content-wrapper\\">
        <div class=\\"mb-timeline-item-content\\">
          <div class=\\"mb-row mb-row-align-start mb-row-justify-start\\" style=\\"display: inline-flex; align-items: center;\\"><img width=\\"40\\" style=\\"margin-right: 16px; margin-bottom: 12px;\\" src=\\"https://p1-mb.byteimg.com/tos-cn-i-uwbnlip3yd/385ed540c359ec8a9b9ce2b5fe89b098.png~tplv-uwbnlip3yd-png.png\\">
            <div style=\\"margin-bottom: 12px;\\"> Pipidance <div style=\\"font-size: 12px; color: rgb(78, 89, 105);\\"> Founded in 2018 </div>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
      <div class=\\"mb-timeline-item-label\\">2018-07</div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;
